Don't assume that GetPrimaryFrameFor actually works correctly.  Bug 403245, r+sr+a=roc